--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.8.4",
+    "date-fns": "^4.1.0",
     "react": "^19.1.0",
+    "react-datepicker": "^8.3.0",
+    "react-day-picker": "^9.6.6",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.55.0",
     "react-icons": "^5.5.0",
