--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-day-picker": "^9.6.6",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.55.0",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router": "^7.5.0",
