--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-router": "^7.5.0",
     "react-router-dom": "^6.30.0",
     "react-scripts": "5.0.1",
+    "react-time-picker": "^7.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
